--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-HELLO WORLD
+<!DOCTYPE html><html lang="en"><head><link href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>vuejs</title><script src="https://kit.fontawesome.com/29a0e49d27.js"></script><script>function play() {
+                if (document.getElementById('audio').play()) {
+                    document.getElementById('video').pause();
+                }
+                if (document.getElementById('video').play()) {
+                    document.getElementById('audio').pause();
+                }
+                console.log('function execute.');
+                document.getElementById('hihi').innerHTML = 'Xin chào';
+            }</script><link href="/css/app.ea597aa3.css" rel="preload" as="style"><link href="/js/app.835c18ce.js" rel="preload" as="script"><link href="/js/chunk-vendors.b07eacaa.js" rel="preload" as="script"><link href="/css/app.ea597aa3.css" rel="stylesheet"></head><body><div id="app"></div><script src="/js/chunk-vendors.b07eacaa.js"></script><script src="/js/app.835c18ce.js"></script></body></html>
